[package]
name = "arena"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]

[dependencies]
arena_core = { path = "./arena_core" }
arena_net = { path = "./arena_net" }

serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.27"
log = "0.4.5"
env_logger = "0.5.13"


[workspace]
members = [
    "arena_core",
    "arena_net"
]
